...
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                // 标题
                TextFormField(
                  controller: _titleController,
                  decoration: InputDecoration(
                    labelText: '标题',
                    floatingLabelBehavior: FloatingLabelBehavior.auto,
                    border: OutlineInputBorder(
                      borderRadius: BorderRadius.circular(12.0),
                      borderSide: BorderSide.none,
                    ),
                    enabledBorder: OutlineInputBorder(
...
                        padding: const EdgeInsets.symmetric(horizontal: 28, vertical: 12),
                        shape: RoundedRectangleBorder(
                          borderRadius: BorderRadius.circular(10),
                        ),
                        elevation: 0,
                      ),
                      child: Text(_isEditing ? '更新' : '创建'),
                    ),
                  ],
                ),
              ],
            ),
          ),
...
