...
              ),
              label: Text('优先任务'),
            ),
            NavigationRailDestination(
              icon: Icon(Icons.library_books, color: Colors.blue),
              selectedIcon: Icon(Icons.library_books, color: Colors.blue),
              label: Text('项目'),
            ),
            NavigationRailDestination(
              icon: Badge(
                isLabelVisible: projectsNeedingReview.isNotEmpty,
                label: Text(projectsNeedingReview.length.toString()),
                child: Icon(Icons.history, color: Colors.indigo),
...
